--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "datasets>=4.0.0",
     "dspy",
+    "faiss-cpu>=1.11.0",
+    "ipykernel>=6.29.5",
+    "mlflow>=3.1.1",
     "pydantic>=2.11.7",
     "ruff>=0.12.3",
 ]
