--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "datasets>=4.0.0",
     "dspy",
     "faiss-cpu>=1.11.0",
+    "func-timeout>=4.3.5",
     "groq>=0.30.0",
     "ipykernel>=6.29.5",
     "math-equivalence",
